# EightBot

./: .env.sample  .eslintrc.cjs  .eslintrc.js  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENCE  LICENSE  README.md  SECURITY.md  color.py  deno.jsonc  env.md  index.ts  main.py  package.json  pyproject.toml  tsconfig.json  webserver.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: バグ報告.md  機能リクエスト.md
.github/workflows/: Prettier.yml  black.yml  codeql-analysis.yml  codeql.yml  main.yml
Eight_Modules/: db.py
cogs/: 2022.py  5000.py  afk.py  auto-news.py  ban_member.py  bot_info.py  bot_invite.py  bot_process.py  embed.py  global-chat.py  help.py  imgcheck.py  ping.py  role_all.py  role_list.py  splatoon2.py  trans.py  uptime.py  userinfo.py  verify.py  verify_callback.py  voicetext.py  weather.py
commands/: ping.ts
commands/bot/: bot_invite.ts  help.ts  ping.ts
commands/individual/: 5000.ts  akinator.ts  downcheck.ts  google.ts  slot.ts  tanzaku.ts  textspace.ts  totuzen.ts  url_check.ts  url_short.ts
commands/server/: ban_member.ts  embed.ts  poll.ts  poll_stop.ts  role_all.ts  role_panel.ts  verify.ts
db/: readme.md
listeners/: embed_color.ts  embed_res.ts  poll.ts  poll_res.ts  ready.ts  role_adds_button.ts  role_panel_add_select.ts  verify_1.ts  verify_2.ts  verify_2_1.ts  verify_3.ts  verify_3_1.ts
locales/: README.md  en-US.ts  ja.ts
src/: README.md  deps.ts  index.ts  main.ts  register.ts  secret.ts
src/command/: banmember.ts  gosentyoen.ts  index.ts  invite.ts  textspace.ts  totuzen.ts  urlcheck.ts  (+1 more)
(+48 files in other folders)
