[tool.poetry]
name = "EightBot"
version = "2.2.0"
description = ""
authors = ["EightBotDev <eightbot1644@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
discord = "^2.1.0"
requests = "^2.28.1"
black = "^22.10.0"
autoflake = "^1.7.7"
ndjson = "^0.3.1"